<resources>
    <string name="app_name">滴滴无障碍</string>
    <string name="description">已启动</string>
    <string name="no_suspension_windows_permission">没有悬浮窗权限</string>

    <string name="suspension_windows">悬浮窗</string>

    <string name="keywords">关键字</string>
    <string name="use_spaces_to_separate">使用空格隔开</string>
    <string name="distance">距离</string>
    <string name="user_distance">用户距离</string>
    <string name="the_starting_point">出发点</string>


    <string name="senior">高级</string>
    <string name="rule">规则</string>
    <string name="sate">状态</string>
    <string name="auto_close">自动关闭</string>
    <string name="time">时间</string>
    <string name="use_car_time">用车时间</string>
    <string name="i_distance_users">我距离用户</string>
    <string name="user_distance_destination">用户距离终点</string>
    <string name="destination">终点</string>
    <string name="other">其他</string>
    <string name="format_error">格式错误</string>

    <string name="confirm">确定</string>
    <string name="copy_device_id">复制手机ID</string>
    <string name="cancel">取消</string>
    <string name="save_success">保存成功</string>
    <string name="copy_success">复制成功</string>
    <string name="the_start_time_cannot_be_greater_than_the_end_time">开始时间不能大于结束时间</string>
    <string name="please_open_the_network_and_try_again">请打开网络后重试</string>

    <string name="unit_meter">单位米</string>
    <string name="kilometer">千米</string>
    <string name="to">到</string>
    <string name="farthest_drive">最远车程</string>

    <string name="valid_time">有效时间</string>
    <string name="validation_failed_please_try_again_after_you_open_the_network">验证失败，请打开网络后重试</string>
    <string name="authentication_is_successful">验证成功</string>
    <string name="authentication_is_failure">验证失败</string>
    <string name="please_enter_the_registration_code">请输入注册码</string>
    <string name="registration_code">注册码</string>

    <string name="share">分享</string>
    <string name="send_log">发送日志</string>
    <string name="poll_code">注册码</string>
    <string name="click_random_delay">点击随机延迟</string>
    <string name="please_grant_root_authority">请授予root权限</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <array name="i_distance_users_entries">
        <item>匹配</item>
        <item>关闭</item>
    </array>
    <string-array name="i_distance_users_entryValues">
        <item>1</item>
        <item>0</item>
    </string-array>

    <array name="use_car_time_entries">
        <item>匹配</item>
        <item>关闭</item>
    </array>
    <string-array name="use_car_time_entryValues">
        <item>1</item>
        <item>0</item>
    </string-array>

    <array name="user_distance_destination_entries">
        <item>匹配</item>
        <item>关闭</item>
    </array>
    <string-array name="user_distance_destination_entryValues">
        <item>1</item>
        <item>0</item>
    </string-array>


    <array name="the_starting_point_key_entries">
        <item>匹配</item>
        <item>排除</item>
        <item>关闭</item>
    </array>
    <string-array name="the_starting_point_key_entryValues">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <array name="destination_entries">
        <item>匹配</item>
        <item>排除</item>
        <item>关闭</item>
    </array>
    <string-array name="destination_entryValues">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>


    <!-- <array name="farthest_drive_entries">
         <item>匹配</item>
         <item>关闭</item>
     </array>
     <string-array name="farthest_drive_entryValues">
         <item>1</item>
         <item>0</item>
     </string-array>-->
</resources>
