<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">


    <PreferenceCategory android:title="@string/time">

        <EditTextPreference
            android:key="use_car_time_key"
            android:title="@string/use_car_time" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/use_car_time_entries"
            android:entryValues="@array/use_car_time_entryValues"
            android:key="use_car_time_sate_key"></ListPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/distance">

        <EditTextPreference
            android:key="i_distance_users_key"
            android:numeric="decimal"
            android:title="@string/i_distance_users" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/i_distance_users_entries"
            android:entryValues="@array/i_distance_users_entryValues"
            android:key="i_distance_users_sate_key"></ListPreference>

        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="users_distance_destination_key"
            android:title="@string/user_distance_destination" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/user_distance_destination_entries"
            android:entryValues="@array/user_distance_destination_entryValues"
            android:key="user_distance_destination_state_key"></ListPreference>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/keywords">


        <EditTextPreference
            android:key="the_starting_point_keywords_key"
            android:title="@string/the_starting_point" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/the_starting_point_key_entries"
            android:entryValues="@array/the_starting_point_key_entryValues"
            android:key="the_starting_point_state_key"></ListPreference>

        <EditTextPreference
            android:key="destination_keywords_key"
            android:title="@string/destination" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/destination_entries"
            android:entryValues="@array/destination_entryValues"
            android:key="destination_state_key"></ListPreference>


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/senior">

        <!--  <EditTextPreference
              android:key="farthest_drive_key"
              android:title="@string/farthest_drive" />
          <ListPreference
              android:defaultValue="0"
              android:entries="@array/farthest_drive_entries"
              android:entryValues="@array/farthest_drive_entryValues"
              android:key="farthest_drive_sate_key"></ListPreference>-->

        <SeekBarPreference
            android:max="70"
            android:defaultValue="20"
            android:key="click_random_delay_key"
            android:persistent="true"
            android:summary="@string/click_random_delay" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/other">
        <CheckBoxPreference
            android:key="is_show_suspension_window_key"
            android:summary="@string/suspension_windows" />
    </PreferenceCategory>


</PreferenceScreen>